--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -24,6 +24,10 @@ body{
     
 }
 
+.logotipo:hover{
+    cursor: pointer;
+}
+
 .titulo{
     color:#0c6b03;
 }
@@ -60,6 +64,12 @@ body{
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 15px;
+    border-radius: 15px;
+}
+
+.boton:hover{
+    scale: 110%;
+    cursor: pointer;
 }
 
 .space {
