--- a/frontend/src/components/admin_ad_carreras.css
+++ b/frontend/src/components/admin_ad_carreras.css
@@ -6,7 +6,21 @@
     max-width: 310px;
 }
 
+.text-center{
+    color:green;
+}
+
+.text-calendar{
+    color:green;
+}
+
 .seccion-botones{
     display: flex;
     flex-direction: column;
+}
+.seccion-formulario{
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
