--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -63,7 +63,8 @@ body{
     text-align: center;
     border-style: inset;
     border-radius: 10px;
-    max-width: 530px;
+    width: 650px;
+    max-width: 800px;
     min-width: 204.39px;
     min-height: 310.44px;
 }
